# a_maz_ing_42

./: Makefile  README.md  a_maze_ing.py  ascii_render.py  config.txt  config_parser.py  intro_animation.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  setup.py  test_grid.py
demos/: dfs_maze_generation_interactive.html  small_maze_bfs_42pattern.html
maze/: ascii_render.py  cell.py  encoder.py  generator.py  grid.py  intro_animation.py  pattern.py  solver.py
mazegen/: mazegenerator.py
mazegen_core/: generator.py
parsing/: config_parser.py
