[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-core"
version = "0.1.0"
description = "Reusable maze generator package for a-maze-ing"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["maze", "mazegen_core", "parsing"]
